# nebula-package-manager

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  debian.rs  errors.rs  lib.rs  pkg.rs  pkgdb.rs  utils.rs
src/repos/: debian.rs  mod.rs  nebula.rs  rosetta.rs
src/utils/: cli.rs  fs.rs  mod.rs  resolve.rs  search.rs
