[package]
name = "nbpm"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.115"
serde_derive = "1.0.115"
toml = "0.5"
curl = "0.4.31"
walkdir = "2.3.1"
log = "0.4.11"
simplelog = "0.8.0"
sha2 = "0.9.1"
lazy_static = "1.4.0"
regex = "1.3.9"
version-compare = "0.0.10"
clap = "2"

[[bin]]
name = "nb"
path = "src/bin/nb.rs"
